--- a/src/Zyborg.Collections.RadixTree/Zyborg.Collections.RadixTree.csproj
+++ b/src/Zyborg.Collections.RadixTree/Zyborg.Collections.RadixTree.csproj
@@ -6,19 +6,33 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <!--
+    - Resolve versioning information in concert with AppVeyor environment and
+    - also verifies that the base version info here agrees with the AV config
+    -->
+  <PropertyGroup Condition="'$(APPVEYOR_BUILD_NUMBER)'==''">
+    <BaseVersion>1.0.0</BaseVersion>
+    <FullVersion>$(BaseVersion).0</FullVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(APPVEYOR_BUILD_NUMBER)'!=''">
+    <BaseVersion>1.0.0</BaseVersion>
+    <FullVersion>$(BaseVersion).$(APPVEYOR_BUILD_NUMBER)</FullVersion>
+  </PropertyGroup>
+  <Target Name="CheckAppVeyorVersion" Condition="'$(APPVEYOR_BUILD_NUMBER)'!=''" BeforeTargets="Build">
+    <Error Condition="$(FullVersion)!=$(APPVEYOR_BUILD_VERSION)" Text="AppVeyor version does not match BaseVersion!" />
+  </Target>
+
   <PropertyGroup>
     <AssemblyName>Zyborg.Collections.RadixTree</AssemblyName>
     <AssemblyTitle>Radix Tree for .NET</AssemblyTitle>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyVersion>$(FullVersion)</AssemblyVersion>
     <Authors>https://github.com/zyborg/Zyborg.RadixTree/graphs/contributors</Authors>
     <Company>https://github.com/zyborg</Company>
     <Product>Zyborg.RadixTree</Product>
     <Copyright>Copyright © Eugene Bekker.  All rights reserved.  Licensed under the MIT License.</Copyright>
     <PackageProjectUrl>https://github.com/zyborg/Zyborg.RadixTree</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/zyborg/Zyborg.RadixTree</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <Version>1.0.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Version>$(FullVersion)</Version>
+    <FileVersion>$(FullVersion)</FileVersion>
     <Description>.NET implementation of radix trees, ported from the Go implementation.</Description>
     <PackageLicenseUrl>https://github.com/zyborg/Zyborg.RadixTree/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
